# esp32_upnp

./: .directory  Cargo.toml  README.md  cfg.toml  diagram.json  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: http_client.rs  main.rs
