[package]
name = "esp32_upnp"
version = "0.1.0"
authors = ["Florian Zier <9168602+zierf@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
debug = true    # Symbols don't increase size on Flash
opt-level = "z"

[features]
default = []
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1"
embedded-graphics = "0.7"
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
] }
embedded-svc = "0.24"
esp-idf-hal = "0.40"
esp-idf-svc = { version = "0.45", features = ["experimental"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_info",
] }
toml-cfg = "0.1"

[build-dependencies]
embuild = "0.31.0"
